--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./img/logo/Logo-Header.ico">
+  <link rel="icon" type="image/x-icon" href="./img/logotipo/logo-Web.ico">
   <link rel="stylesheet" href="css/todo.css">
   <!-- <link rel="stylesheet" href="css/basicas.css">
   <link rel="stylesheet" href="css/layout.css">
@@ -19,7 +19,7 @@
     <nav class="menu">
 
       <a href="#">
-        <img class="logo-img" loading="lazy" src="img/logo/Logo-Header.svg" alt="Logo Cabecera">
+        <img class="logo-img" loading="lazy" src="img/logotipo/svg/logo-Header.svg" alt="Logo Cabecera">
       </a>
 
       <section class="enlaces ">
