Cambios varios: HTML, SCSS y PDFs

--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -22,7 +22,9 @@
               media/img/logotipo/png/logo-Header-128px.png 128w,
               media/img/logotipo/png/logo-Header-256px.png 256w,
               media/img/logotipo/png/logo-Header-512px.png 512w
-            " type="image/png">
+            "
+            sizes="(max-width: 600px) 128px, (max-width: 1200px) 256px, 512px"
+            type="image/png">
           <img class="logo-img" loading="lazy" src="media/img/logotipo/png/logo-Header-512px.png" alt="Logo Cabecera">
         </picture>
       </a>
@@ -92,9 +94,11 @@
             <source 
               srcset="
                 media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-                media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w
-                media/img/ico-redes-sociales/png/logo-Instagram-128px.png 32w
-              " type="image/png">
+                media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
+                media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
+              " 
+              sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+              type="image/png">
               <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
           </picture>
         </article>
@@ -105,9 +109,11 @@
             <source 
               srcset="
                 media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-                media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w
-                media/img/ico-redes-sociales/png/logo-Instagram-128px.png 32w
-              " type="image/png">
+                media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
+                media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
+              "
+              sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+              type="image/png">
               <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
           </picture>
         </article>
@@ -118,9 +124,11 @@
             <source 
               srcset="
                 media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-                media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w
-                media/img/ico-redes-sociales/png/logo-Instagram-128px.png 32w
-              " type="image/png">
+                media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
+                media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
+              "
+              sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+              type="image/png">
               <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
           </picture>
         </article>
@@ -144,7 +152,9 @@
               media/img/logotipo/png/logo-Header-Blanco-128px.png 128w,
               media/img/logotipo/png/logo-Header-Blanco-256px.png 256w,
               media/img/logotipo/png/logo-Header-Blanco-512px.png 512w
-            " type="image/png">
+            "
+            sizes="(max-width: 600px) 128px, (max-width: 1200px) 256px, 512px"
+            type="image/png">
           <img class="logo-img" loading="lazy" src="media/img/logotipo/png/logo-Header-Blanco-512px.png" alt="Logo Cabecera">
         </picture>
       </a>
@@ -157,7 +167,9 @@
               media/img/logotipo/png/logo-Patrocinador-128px.png 128w,
               media/img/logotipo/png/logo-Patrocinador-256px.png 256w,
               media/img/logotipo/png/logo-Patrocinador-512px.png 512w
-            " type="image/png">
+            "
+            sizes="(max-width: 600px) 128px, (max-width: 1200px) 256px, 512px"
+            type="image/png">
           <img class="logo-img" loading="lazy" src="media/img/logotipo/png/logo-Patrocinador-512px.png" alt="Logo Cabecera">
         </picture>
       </a>
@@ -172,9 +184,11 @@
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-TikTok-32px.png 32w,
-                  media/img/ico-redes-sociales/png/logo-TikTok-64px.png 64w
-                  media/img/ico-redes-sociales/png/logo-TikTok-128px.png 32w
-                " type="image/png">
+                  media/img/ico-redes-sociales/png/logo-TikTok-64px.png 64w,
+                  media/img/ico-redes-sociales/png/logo-TikTok-128px.png 128w
+                "
+                sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+                type="image/png">
                 <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-TikTok-128px.png" alt="Logo TikTok">
             </picture>
           </a>
@@ -185,9 +199,11 @@
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-                  media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w
-                  media/img/ico-redes-sociales/png/logo-Instagram-128px.png 32w
-                " type="image/png">
+                  media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
+                  media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
+                "
+                sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+                type="image/png">
                 <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
             </picture>
           </a>
@@ -198,9 +214,11 @@
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-Youtube-32px.png 32w,
-                  media/img/ico-redes-sociales/png/logo-Youtube-64px.png 64w
-                  media/img/ico-redes-sociales/png/logo-Youtube-128px.png 32w
-                " type="image/png">
+                  media/img/ico-redes-sociales/png/logo-Youtube-64px.png 64w,
+                  media/img/ico-redes-sociales/png/logo-Youtube-128px.png 128w
+                "
+                sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+                type="image/png">
                 <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Youtube-128px.png" alt="Logo Youtube">
             </picture>
           </a>
@@ -211,9 +229,11 @@
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-Facebook-32px.png 32w,
-                  media/img/ico-redes-sociales/png/logo-Facebook-64px.png 64w
-                  media/img/ico-redes-sociales/png/logo-Facebook-128px.png 32w
-                " type="image/png">
+                  media/img/ico-redes-sociales/png/logo-Facebook-64px.png 64w,
+                  media/img/ico-redes-sociales/png/logo-Facebook-128px.png 128w
+                "
+                sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
+                type="image/png">
                 <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Facebook-128px.png" alt="Logo Facebook">
             </picture>
           </a>
