--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="media/img/logotipo/logo-Web.ico">
-  <link rel="stylesheet" href="styles/css/todo.css">
-  <!-- <link rel="stylesheet" href="styles/css/main.css"> -->
+  <!-- <link rel="stylesheet" href="styles/css/todo.css"> -->
+  <link rel="stylesheet" href="styles/css/main.css">
   <title>Casa di Pepe</title>
 </head>
 
