--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -79,12 +79,12 @@
         <source srcset="media/img/img-decorativa/svg/decorativa-PaginaPrincipal.svg" type="image/svg+xml">
         <source 
           srcset="
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-320px.jpg 320w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-640px.jpg 640w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-960px.jpg 960w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-1600px.jpg 1600w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-2240px.jpg 2240w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-3200px.jpg 3200w,
+            media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-320px.jpg 320w,
+            media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-640px.jpg 640w,
+            media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-960px.jpg 960w,
+            media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-1600px.jpg 1600w,
+            media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-2240px.jpg 2240w,
+            media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-3200px.jpg 3200w
           "
           sizes=" (max-width: 320px) 320px, 
                   (max-width: 640px) 640px, 
@@ -96,12 +96,12 @@
 
           <source 
           srcset="
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-320px.webp 320w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-640px.webp 640w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-960px.webp 960w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-1600px.webp 1600w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-2240px.webp 2240w,
-            media/img/img-decorativa/svg/decorativa-PaginaPrincipal-3200px.webp 3200w,
+            media/img/img-decorativa/webp/decorativa-PaginaPrincipal-320px.webp 320w,
+            media/img/img-decorativa/webp/decorativa-PaginaPrincipal-640px.webp 640w,
+            media/img/img-decorativa/webp/decorativa-PaginaPrincipal-960px.webp 960w,
+            media/img/img-decorativa/webp/decorativa-PaginaPrincipal-1600px.webp 1600w,
+            media/img/img-decorativa/webp/decorativa-PaginaPrincipal-2240px.webp 2240w,
+            media/img/img-decorativa/webp/decorativa-PaginaPrincipal-3200px.webp 3200w
           "
           sizes=" (max-width: 320px) 320px, 
                   (max-width: 640px) 640px, 
@@ -110,7 +110,7 @@
                   (max-width: 2240px) 2240px, 
                   3200px"
           type="image/webp">
-        <img class="img-deco-index" loading="lazy" src="media/img/img-decorativa/svg/decorativa-PaginaPrincipal-3200px.webp" alt="Imagen de Decoracion">
+        <img class="img-deco-index" loading="lazy" src="media/img/img-decorativa/webp/decorativa-PaginaPrincipal-3200px.webp" alt="Imagen de Decoracion">
       </picture>
     </section>
 
@@ -126,42 +126,41 @@
 
       <div class="redes-img">
         <picture>
-          <source srcset="media/img/ico-redes-sociales/svg/logo-Instagram.svg" type="image/svg+xml">
+          <source srcset="media/img/img-decorativa/svg/decorativa-PaginaPrincipal-RS-1.svg" type="image/svg+xml">
           <source 
             srcset="
-              media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-              media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
-              media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
-            " 
-            sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
-            type="image/png">
-            <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
-        </picture>
-
-        <picture>
-          <source srcset="media/img/ico-redes-sociales/svg/logo-Instagram.svg" type="image/svg+xml">
-          <source 
-            srcset="
-              media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-              media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
-              media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
+              media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-RS-1-320px.jpg 320w,
+              media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-RS-1-640px.jpg 640w,
+              media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-RS-1-960px.jpg 960w,
+              media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-RS-1-1600px.jpg 1600w,
+              media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-RS-1-2240px.jpg 2240w,
+              media/img/img-decorativa/jpg/decorativa-PaginaPrincipal-RS-1-3200px.jpg 3200w
             "
-            sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
-            type="image/png">
-            <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
-        </picture>
-
-        <picture>
-          <source srcset="media/img/ico-redes-sociales/svg/logo-Instagram.svg" type="image/svg+xml">
-          <source 
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/jpg">
+  
+            <source 
             srcset="
-              media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
-              media/img/ico-redes-sociales/png/logo-Instagram-64px.png 64w,
-              media/img/ico-redes-sociales/png/logo-Instagram-128px.png 128w
+              media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-320px.webp 320w,
+              media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-640px.webp 640w,
+              media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-960px.webp 960w,
+              media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-1600px.webp 1600w,
+              media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-2240px.webp 2240w,
+              media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-3200px.webp 3200w
             "
-            sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
-            type="image/png">
-            <img class="insta-img" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/webp">
+          <img class="img-deco-index-redes" loading="lazy" src="media/img/img-decorativa/webp/decorativa-PaginaPrincipal-RS-1-3200px.webp" alt="Imagen de Decoracion">
         </picture>
       </div>
 
