--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="media/img/logotipo/logo-Web.ico">
-  <!-- <link rel="stylesheet" href="styles/css/todo.css"> -->
-  <link rel="stylesheet" href="styles/css/main.css">
+  <link rel="stylesheet" href="styles/css/todo.css">
+  <!-- <link rel="stylesheet" href="styles/css/index.css"> -->
   <title>Casa di Pepe</title>
 </head>
 
@@ -61,21 +61,6 @@
     </section>
 
     <section class="contenido">
-      <article class="cont-texto">
-        <h2>Sobre Nosotros</h2>
-        <p>En el corazón de la tradición toscana, Casa di Pepe nació como un
-          homenaje a las recetas auténticas y los sabores inolvidables de Italia.
-        </p>
-        <p> 
-          Desde su fundación, nuestro restaurante ha sido un punto de encuentro 
-          donde la pasión por la cocina y la hospitalidad se unen para crear 
-          experiencias únicas.</p>
-        <p>
-          Descubre nuestra historia y cómo cada plato cuenta una parte de ella.
-        </p>
-        <a href="#" class="boton-pred">Saber Mas</a> 
-      </article>
-
       <picture>
         <source 
           srcset="
@@ -114,6 +99,21 @@
         <source srcset="media/img/img-decorativa/svg/decorativa-PaginaPrincipal.svg" type="image/svg+xml">
         <img class="img-deco-index" loading="lazy" src="media/img/img-decorativa/webp/decorativa-PaginaPrincipal-3200px.webp" alt="Imagen de Decoracion">
       </picture>
+
+      <article class="cont-texto">
+        <h2>Sobre Nosotros</h2>
+        <p>En el corazón de la tradición toscana, Casa di Pepe nació como un
+          homenaje a las recetas auténticas y los sabores inolvidables de Italia.
+        </p>
+        <p> 
+          Desde su fundación, nuestro restaurante ha sido un punto de encuentro 
+          donde la pasión por la cocina y la hospitalidad se unen para crear 
+          experiencias únicas.</p>
+        <p>
+          Descubre nuestra historia y cómo cada plato cuenta una parte de ella.
+        </p>
+        <a href="#" class="boton-pred">Saber Mas</a> 
+      </article>
     </section>
 
     <aside class="anuncio">
