--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -17,7 +17,7 @@
     <nav class="menu">
 
       <!-- Logotipo de la Casas Di Pepe -->
-      <a href="#">
+      <a href="index.html">
           <picture>
             <source 
               srcset="
