--- a/Fuente/index.html
+++ b/Fuente/index.html
@@ -35,7 +35,7 @@
 
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
-        <li><a href="#"> CARTA </a> </li>
+        <li><a href="html/carta.html"> CARTA </a> </li>
         <li><a href="#"> TIENDA </a> </li>
         <li><a href="#"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
@@ -357,7 +357,6 @@
         <nav class="img-redes">
           <a href="#">
             <picture>
-              <source srcset="media/img/ico-redes-sociales/svg/logo-TikTok.svg" type="image/svg+xml">
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-TikTok-32px.png 32w,
@@ -367,13 +366,13 @@
                 sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
                 type="image/png">
 
+                <source srcset="media/img/ico-redes-sociales/svg/logo-TikTok.svg" type="image/svg+xml">
                 <img class="img-logoRedes" loading="lazy" src="media/img/ico-redes-sociales/png/logo-TikTok-128px.png" alt="Logo TikTok">
             </picture>
           </a>
 
           <a href="#">
             <picture>
-              <source srcset="media/img/ico-redes-sociales/svg/logo-Instagram.svg" type="image/svg+xml">
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-Instagram-32px.png 32w,
@@ -383,13 +382,13 @@
                 sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
                 type="image/png">
 
+                <source srcset="media/img/ico-redes-sociales/svg/logo-Instagram.svg" type="image/svg+xml">
                 <img class="img-logoRedes" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Instagram-128px.png" alt="Logo Instagram">
             </picture>
           </a>
           
           <a href="#">
             <picture>
-              <source srcset="media/img/ico-redes-sociales/svg/logo-Youtube.svg" type="image/svg+xml">
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-Youtube-32px.png 32w,
@@ -399,13 +398,13 @@
                 sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
                 type="image/png">
 
+                <source srcset="media/img/ico-redes-sociales/svg/logo-Youtube.svg" type="image/svg+xml">
                 <img class="img-logoRedes" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Youtube-128px.png" alt="Logo Youtube">
             </picture>
           </a>
 
           <a href="#">
             <picture>
-              <source srcset="media/img/ico-redes-sociales/svg/logo-Facebook.svg" type="image/svg+xml">
               <source 
                 srcset="
                   media/img/ico-redes-sociales/png/logo-Facebook-32px.png 32w,
@@ -415,6 +414,7 @@
                 sizes="(max-width: 600px) 32px, (max-width: 1200px) 64px, 128px"
                 type="image/png">
 
+                <source srcset="media/img/ico-redes-sociales/svg/logo-Facebook.svg" type="image/svg+xml">
                 <img class="img-logoRedes" loading="lazy" src="media/img/ico-redes-sociales/png/logo-Facebook-128px.png" alt="Logo Facebook">
             </picture>
           </a>
