Modificacion de Imagenes Adapatables y Carta

--- a/Fuente/html/carta.html
+++ b/Fuente/html/carta.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="../media/img/logotipo/logo-Web.ico">
-  <link rel="stylesheet" href="../styles/css/index.css">
+  <link rel="stylesheet" href="../styles/css/carta.css">
   <script src="../scripts/js/menu-desplegable.js" defer></script>
   <title>Casa di Pepe</title>
 </head>
@@ -35,7 +35,7 @@
 
       <!-- Enlaces Principales de la Web -->
       <ul class="enlaces">
-        <li><a href="html/carta.html"> CARTA </a> </li>
+        <li><a href="carta.html"> CARTA </a> </li>
         <li><a href="#"> TIENDA </a> </li>
         <li><a href="#"> RESERVAR MESA </a> </li>
         <li><a href="#"> HACER PEDIDO </a> </li>
@@ -54,6 +54,218 @@
   </header>
 
   <main>
+    <!-- Sección Principal con Hero-Image, titulo, subtítulo y botones -->
+    <section class="introduccion">
+      <figure class="img-header-pred img-carta"></figure>
+      <div class="intro-texto">
+        <h1>CARTA DE CASA DI PEPE</h1>
+        <h3>COCINA CON EL CORAZÓN, SIRVE CON EL ALMA</h3>
+      </div>
+    </section>
+
+    <nav class="menu-carta">
+      <ul>
+        <li><a class="boton-pred" id="entrantes">Entrantes</a></li>
+        <li><a class="boton-pred" id="sopa">Sopa</a></li>
+        <li><a class="boton-pred" id="ensaladas">Ensaladas</a></li>
+        <li><a class="boton-pred" id="Pasta">Pasta</a></li>
+        <li><a class="boton-pred" id="Pizza">Pizza</a></li>
+        <li><a class="boton-pred" id="Vinos">Vinos</a></li>
+      </ul>
+    </nav>
+
+    <div class="mostrar carta-img">
+      <!-- Imagen del menú Pasta 1 + Descripcion de Productos -->
+      <figure class="img-prod-carta">
+        <picture>
+          <source 
+            srcset="
+              ../media/img/img-producto/jpg/producto-Carta-1-320px.jpg 320w,
+              ../media/img/img-producto/jpg/producto-Carta-1-640px.jpg 640w,
+              ../media/img/img-producto/jpg/producto-Carta-1-960px.jpg 960w,
+              ../media/img/img-producto/jpg/producto-Carta-1-1600px.jpg 1600w,
+              ../media/img/img-producto/jpg/producto-Carta-1-2240px.jpg 2240w,
+              ../media/img/img-producto/jpg/producto-Carta-1-3200px.jpg 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/jpg">
+  
+            <source 
+            srcset="
+              ../media/img/img-producto/png/producto-Carta-1-320px.png 320w,
+              ../media/img/img-producto/png/producto-Carta-1-640px.png 640w,
+              ../media/img/img-producto/png/producto-Carta-1-960px.png 960w,
+              ../media/img/img-producto/png/producto-Carta-1-1600px.png 1600w,
+              ../media/img/img-producto/png/producto-Carta-1-2240px.png 2240w,
+              ../media/img/img-producto/png/producto-Carta-1-3200px.png 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/png">
+
+            <source 
+            srcset="
+              ../media/img/img-producto/webp/producto-Carta-1-320px.webp 320w,
+              ../media/img/img-producto/webp/producto-Carta-1-640px.webp 640w,
+              ../media/img/img-producto/webp/producto-Carta-1-960px.webp 960w,
+              ../media/img/img-producto/webp/producto-Carta-1-1600px.webp 1600w,
+              ../media/img/img-producto/webp/producto-Carta-1-2240px.webp 2240w,
+              ../media/img/img-producto/webp/producto-Carta-1-3200px.webp 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/webp">
+  
+          <img class="img-main" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-1-3200px.webp" alt="Imagen de Producto">
+        </picture>
+
+        <section class="img-desc">
+          <h1>Spaghetti alla Carbonara</h1>
+          <p></p>
+        </section>
+      </figure>
+
+      <!-- Imagen del menú Pasta 2 + Descripcion de Productos -->
+      <figure class="img-prod-carta">
+        <picture>
+          <source 
+            srcset="
+              ../media/img/img-producto/jpg/producto-Carta-2-320px.jpg 320w,
+              ../media/img/img-producto/jpg/producto-Carta-2-640px.jpg 640w,
+              ../media/img/img-producto/jpg/producto-Carta-2-960px.jpg 960w,
+              ../media/img/img-producto/jpg/producto-Carta-2-1600px.jpg 1600w,
+              ../media/img/img-producto/jpg/producto-Carta-2-2240px.jpg 2240w,
+              ../media/img/img-producto/jpg/producto-Carta-2-3200px.jpg 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/jpg">
+  
+            <source 
+            srcset="
+              ../media/img/img-producto/png/producto-Carta-2-320px.png 320w,
+              ../media/img/img-producto/png/producto-Carta-2-640px.png 640w,
+              ../media/img/img-producto/png/producto-Carta-2-960px.png 960w,
+              ../media/img/img-producto/png/producto-Carta-2-1600px.png 1600w,
+              ../media/img/img-producto/png/producto-Carta-2-2240px.png 2240w,
+              ../media/img/img-producto/png/producto-Carta-2-3200px.png 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/png">
+
+            <source 
+            srcset="
+              ../media/img/img-producto/webp/producto-Carta-2-320px.webp 320w,
+              ../media/img/img-producto/webp/producto-Carta-2-640px.webp 640w,
+              ../media/img/img-producto/webp/producto-Carta-2-960px.webp 960w,
+              ../media/img/img-producto/webp/producto-Carta-2-1600px.webp 1600w,
+              ../media/img/img-producto/webp/producto-Carta-2-2240px.webp 2240w,
+              ../media/img/img-producto/webp/producto-Carta-2-3200px.webp 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/webp">
+  
+          <img class="img-main" loading="lazy" src="../media/webp/img-producto/webp/producto-Carta-2-3200px.webp" alt="Imagen de Producto">
+        </picture>
+
+        <section class="img-desc">
+          <h1></h1>
+          <p></p>
+        </section>
+      </figure>
+
+      <!-- Imagen del menú Pasta 3 + Descripcion de Productos -->
+      <figure class="img-prod-carta">
+        <picture>
+          <source 
+            srcset="
+              ../media/img/img-producto/jpg/producto-Carta-3-320px.jpg 320w,
+              ../media/img/img-producto/jpg/producto-Carta-3-640px.jpg 640w,
+              ../media/img/img-producto/jpg/producto-Carta-3-960px.jpg 960w,
+              ../media/img/img-producto/jpg/producto-Carta-3-1600px.jpg 1600w,
+              ../media/img/img-producto/jpg/producto-Carta-3-2240px.jpg 2240w,
+              ../media/img/img-producto/jpg/producto-Carta-3-3200px.jpg 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/jpg">
+  
+            <source 
+            srcset="
+              ../media/img/img-producto/png/producto-Carta-3-320px.png 320w,
+              ../media/img/img-producto/png/producto-Carta-3-640px.png 640w,
+              ../media/img/img-producto/png/producto-Carta-3-960px.png 960w,
+              ../media/img/img-producto/png/producto-Carta-3-1600px.png 1600w,
+              ../media/img/img-producto/png/producto-Carta-3-2240px.png 2240w,
+              ../media/img/img-producto/png/producto-Carta-3-3200px.png 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/png">
+
+            <source 
+            srcset="
+              ../media/img/img-producto/webp/producto-Carta-3-320px.webp 320w,
+              ../media/img/img-producto/webp/producto-Carta-3-640px.webp 640w,
+              ../media/img/img-producto/webp/producto-Carta-3-960px.webp 960w,
+              ../media/img/img-producto/webp/producto-Carta-3-1600px.webp 1600w,
+              ../media/img/img-producto/webp/producto-Carta-3-2240px.webp 2240w,
+              ../media/img/img-producto/webp/producto-Carta-3-3200px.webp 3200w
+            "
+            sizes=" (max-width: 320px) 320px, 
+                    (max-width: 640px) 640px, 
+                    (max-width: 960px) 960px, 
+                    (max-width: 1600px) 1600px, 
+                    (max-width: 2240px) 2240px, 
+                    3200px"
+            type="image/webp">
+  
+          <img class="img-main" loading="lazy" src="../media/img/img-producto/webp/producto-Carta-2-3200px.webp" alt="Imagen de Producto">
+        </picture>
+
+        <section class="img-desc">
+          <h1></h1>
+          <p></p>
+        </section>
+      </figure>
+    </div>
+
+
     
   </main>
 
